update something new

--- a/src/app/components/alert/alert.component.html
+++ b/src/app/components/alert/alert.component.html
@@ -5,7 +5,7 @@
   [@fadeOut]="!dismissed"
 >
 
-<!-- border-2 -->
+<!-- border -->
 <div
 class="alert__border"
 *ngIf="appearance === 'border'"></div>
