--- a/src/app/modules/admin/account/change-password/change-password.component.html
+++ b/src/app/modules/admin/account/change-password/change-password.component.html
@@ -4,7 +4,7 @@
     (ngSubmit)="submit()"
     class="flex flex-col gap-4"
   >
-    <div class="bg-surface rounded p-6 pb-2 border-2 border-solid border-light">
+    <div class="bg-surface rounded p-6 pb-2 border border-solid border-light">
       <div class="font-medium text-xl mb-3">
         {{ "ChangePassword.Title" | translate }}
       </div>
