--- a/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
+++ b/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
@@ -246,12 +246,13 @@
   </div>
 
   <!-- Footer -->
-  <div class="dialog__footer bg-hover">
+  <div class="dialog__footer">
     <div class="w-full flex justify-end">
       <button
         type="button"
         mat-flat-button
         color="primary"
+        class="btn--sm"
         [autoFocus]="true"
         [matDialogClose]="undefined"
       >
