--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -26,13 +26,13 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:sm:border-2 border-solid border-light"
+      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:sm:border border-solid border-light"
     >
       <div class="flex flex-col gap-3 text-center">
         <div class="font-medium  text-2xl">
           {{ "ForgotPassword.Title" | translate }}
         </div>
-        <div class="text-gray-600">
+        <div class="text-secondary">
           {{ "ForgotPassword.SubTitle" | translate }}
         </div>
       </div>
