--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -12,13 +12,13 @@
         <languages></languages>
       </div>
     </div>
-    <div class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:sm:border-2 border-solid border-light">
+    <div class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:sm:border border-solid border-light">
       <ng-container *ngIf="!isChanged">
         <div class="flex flex-col gap-3 text-center">
           <div class="font-medium  text-2xl">
             {{ "PasswordReset.Title" | translate }}
           </div>
-          <div class="text-gray-600">
+          <div class="text-secondary">
             {{ "PasswordReset.SubTitle" | translate }}
           </div>
         </div>
