--- a/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
+++ b/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
@@ -54,11 +54,11 @@
                   (keydown.enter)="(false)"
                 >
                   <div class="flex flex-col gap-2 mb-4">
-                    <div class="text-tertiary flex gap-1 items-center">
+                    <div class="text-secondary flex gap-1 items-center">
                       {{ "TutorProfile.ProfilePicture" | translate }}
                     </div>
                     <div
-                      class="rounded border-2 border-solid bg-surface border-light p-4 flex flex-col"
+                      class="rounded border border-solid bg-surface border-light p-4 flex flex-col"
                     >
                       <div
                         class="flex flex-col items-center gap-3 items-center"
@@ -69,7 +69,7 @@
                               !tutorBasicInfoForm.get('profilePictureUrl')
                                 ?.value
                             "
-                            class="icon-size-24 text-gray-200"
+                            class="icon-size-24 text-hint"
                             svgIcon="mat_outline:account_circle"
                           ></mat-icon>
                           <img
@@ -84,25 +84,12 @@
                           />
                         </div>
                         <div class="flex gap-4 justify-center">
-                          <!-- Remove image -->
+                          <!-- Change image -->
                           <button
-                            *ngIf="
-                              tutorBasicInfoForm.get('profilePictureUrl')?.value
-                            "
                             type="button"
                             mat-button
-                            color="primary"
-                            class="btn--sm"
-                            (click)="onRemoveProfilePicture()"
-                          >
-                            {{ "Action.Remove" | translate }}
-                          </button>
-
-                          <button
-                            type="button"
-                            mat-flat-button
                             [color]="'primary'"
-                            class="btn--sm"
+                            class="btn--sm !border-primary !border !border-solid"
                             (click)="uploadProfilePictureFile.click()"
                           >
                             {{
@@ -110,6 +97,20 @@
                                 ? ("FileUpload.Change" | translate)
                                 : ("FileUpload.AddAPhoto" | translate)
                             }}
+                          </button>
+                          <!-- Remove image -->
+                          <button
+                            *ngIf="
+                              tutorBasicInfoForm.get('profilePictureUrl')?.value
+                            "
+                            type="button"
+                            mat-button
+                            class="btn--sm"
+                            (click)="onRemoveProfilePicture()"
+                          >
+                            <div class="text-danger">
+                              {{ "Action.Remove" | translate }}
+                            </div>
                           </button>
                         </div>
                       </div>
@@ -385,7 +386,7 @@
                     >
                   </mat-form-field>
                   <div class="flex flex-col mb-4">
-                    <div class="text-tertiary flex gap-1 items-center mb-2">
+                    <div class="text-secondary flex gap-1 items-center mb-2">
                       {{ "TutorProfile.LanguagesYouSpeak" | translate }}
                     </div>
                     <div formArrayName="languages" class="flex flex-col gap-3">
@@ -394,7 +395,7 @@
                           let language of languagesFormArray.controls;
                           let i = index
                         "
-                        class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border-2 border-light border-solid px-3 py-2 bg-surface relative"
+                        class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border border-light border-solid px-3 py-2 bg-surface relative"
                         [formGroupName]="i"
                       >
                         <div class="flex-grow">
@@ -488,7 +489,7 @@
                   </div>
 
                   <div class="flex flex-col mb-4">
-                    <div class="text-tertiary flex gap-1 items-center mb-2">
+                    <div class="text-secondary flex gap-1 items-center mb-2">
                       {{ "TutorProfile.TeachingCertificates" | translate }}
                       <span class="text-danger">*</span>
                       <span class="text-gray-400 font-normal text-sm"
@@ -500,7 +501,7 @@
                     </div>
                     <div class="flex flex-col">
                       <div
-                        class="rounded border-2 border-solid bg-surface border-light p-4 flex flex-col gap-2 items-center justify-center relative"
+                        class="rounded border border-solid bg-surface border-light p-4 flex flex-col gap-2 items-center justify-center relative"
                         [ngClass]="
                           isOnDropFilesContainer
                             ? '!border-primary !bg-gray-50'
@@ -547,7 +548,7 @@
                         "
                       >
                         <div
-                          class="bg-surface rounded flex gap-4 items-center px-3 py-2 border-2 border-solid border-light"
+                          class="bg-surface rounded flex gap-4 items-center px-3 py-2 border border-solid border-light"
                           *ngFor="
                             let file of this.tutorExperienceForm.get(
                               'teachingCertificates'
@@ -597,8 +598,10 @@
                     </div>
                   </div>
                   <div class="flex flex-col gap-2">
-                    <div class="text-tertiary">
-                      {{ "TutorProfile.HaveExperienceTeachingOnline" | translate }}
+                    <div class="text-secondary">
+                      {{
+                        "TutorProfile.HaveExperienceTeachingOnline" | translate
+                      }}
                     </div>
                     <mat-radio-group
                       formControlName="haveExperienceTeachingOnline"
@@ -684,15 +687,16 @@
                   </mat-form-field>
 
                   <div class="mb-4">
-                    <div class="text-tertiary mb-2">
+                    <div class="text-secondary mb-2">
                       {{ "TutorProfile.VideoIntroduction" | translate }}
                     </div>
                     <div
-                      class="p-3 rounded bg-surface border-2 border-solid border-light"
+                      class="p-3 rounded bg-surface border border-solid border-light"
                     >
-                      <div class="mb-3 text-gray-600">
+                      <div class="mb-3 text-tertiary">
                         {{
-                          "TutorProfile.VideoIntroductionDescription" | translate
+                          "TutorProfile.VideoIntroductionDescription"
+                            | translate
                         }}
                       </div>
                       <mat-form-field
