--- a/src/styles/scss/components/forms/_checkbox.scss
+++ b/src/styles/scss/components/forms/_checkbox.scss
@@ -1,5 +1,5 @@
 [type="checkbox"] {
-  @apply w-5 h-5 flex-shrink-0 rounded border-2 border-solid border-gray-400;
+  @apply w-5 h-5 flex-shrink-0 rounded border border-solid border-gray-400;
 }
 
 [type="checkbox"]:checked {
