update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -29,7 +29,7 @@
       class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:sm:border border-solid border-light"
     >
       <div class="flex flex-col gap-3 text-center">
-        <div class="font-medium  text-2xl">
+        <div class="font-medium text-2xl">
           {{ "ForgotPassword.Title" | translate }}
         </div>
         <div class="text-secondary">
@@ -80,13 +80,13 @@
             ></mat-icon>
           </button>
           <div
-            class="ml-2"
+            class="ml-2 flex justify-center items-center"
             matSuffix
             *ngIf="forgotPasswordForm.get('email')?.valid"
           >
             <mat-icon
-              class="!text-success"
-              [svgIcon]="'mat_outline:check_circle'"
+              class="icon-size-5"
+              [svgIcon]="'mat_outline:check'"
             ></mat-icon>
           </div>
           <mat-progress-spinner
