--- a/src/app/modules/client/student/account/user-profile/user-profile.component.html
+++ b/src/app/modules/client/student/account/user-profile/user-profile.component.html
@@ -100,7 +100,7 @@
           type="button"
           matSuffix
           *ngIf="lastName.value != ''"
-          (click)="studentProfileForm.get('firstName')?.setValue('')"
+          (click)="studentProfileForm.get('lastName')?.setValue('')"
         >
           <mat-icon
             class="icon-size-5"
@@ -146,13 +146,13 @@
           ></mat-icon>
         </button>
         <div
-          class="ml-2"
+          class="ml-2 flex justify-center items-center"
           matSuffix
           *ngIf="studentProfileForm.get('email')?.valid"
         >
           <mat-icon
-            class="!text-success"
-            [svgIcon]="'mat_outline:check_circle'"
+            class="icon-size-5"
+            [svgIcon]="'mat_outline:check'"
           ></mat-icon>
         </div>
         <mat-progress-spinner
