update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
   class="w-full min-h-full gap-10 flex flex-col items-center bg-default relative px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
-    <div class="flex justify-between items-center gap-4 w-full py-4">
+    <div class="flex justify-between items-center gap-4 w-full py-2">
       <div class="flex items-center gap-2">
         <a
           class="font-semibold text-default text-xl hover:no-underline cursor-pointer select-none"
@@ -114,14 +114,14 @@
           >
           </mat-progress-spinner>
         </button>
-        <div class="mt-4 text-gray-400 text-center">
+        <div class="mt-4 text-tertiary text-center">
           {{ "ForgotPassword.BackTo" | translate }}
           <a routerLink="/">{{ "Login.Title" | translate }}</a>
         </div>
       </form>
     </div>
   </div>
-  <div class="mt-auto text-gray-400 text-sm text-center pt-4 pb-3">
+  <div class="mt-auto text-hint text-sm text-center py-4">
     &copy; 2022 Vietspeak. All rights reserved.
   </div>
 </div>
