--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -2,7 +2,7 @@
   class="w-full min-h-full flex flex-col gap-10 items-center bg-default relative px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
-    <div class="flex justify-between items-center gap-4 w-full py-4">
+    <div class="flex justify-between items-center gap-4 w-full py-2">
       <div class="flex items-center gap-2">
         <a
           class="font-semibold text-default text-xl hover:no-underline cursor-pointer select-none"
@@ -174,7 +174,7 @@
       </ng-container>
     </div>
   </div>
-  <div class="mt-auto text-gray-400 text-sm text-center pt-4 pb-3">
+  <div class="mt-auto text-hint text-sm text-center py-4">
     &copy; 2022 Vietspeak. All rights reserved.
   </div>
 </div>
