update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:sm:border border-solid border-light"
+      class="w-full max-w-md sm:bg-surface sm:p-8 sm:rounded-md sm:sm:border border-solid border-light"
     >
       <div class="flex flex-col gap-3 text-center">
         <div class="font-medium text-2xl">
