--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,13 +27,13 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:sm:border border-solid border-light"
+      class="w-full max-w-md sm:bg-surface sm:p-8 sm:rounded-md sm:sm:border border-solid border-light"
     >
       <div class="font-medium text-2xl text-center">
         {{ "Login.Title" | translate }}
       </div>
 
-      <div class="flex flex-col gap-3 mt-8">
+      <div class="flex flex-col gap-3 mt-5">
         <button mat-stroked-button class="w-full btn--lg relative">
           <div class="flex items-center gap-4">
             <div class="absolute left-4 top-1/2 -mt-3">
