--- a/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
+++ b/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
@@ -137,14 +137,14 @@
         <div class="border-0 border-t border-solid border-light my-3"></div>
         <div class="flex flex-col gap-2">
           <div class="font-medium text-lg">
-            {{ "TutorProfile.Certification" | translate }}
+            {{ "TutorProfile.Certificate" | translate }}
           </div>
           <div class="flex flex-col gap-2">
             <a class="text-accent cursor-default"
-              >Teaching-certification-documents-1.pdf</a
+              >Teaching-Certificate-documents-1.pdf</a
             >
             <a class="text-accent cursor-default"
-              >Teaching-certification-documents-2.pdf</a
+              >Teaching-Certificate-documents-2.pdf</a
             >
           </div>
         </div>
