--- a/src/app/modules/client/tutor/home/home.component.html
+++ b/src/app/modules/client/tutor/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="font-medium  text-2xl">
     {{
       "Home.Welcome"
-        | translate : { name: userService.currentUserValue?.fullName }
+        | translate : { name: userService.currentUserValue?.name }
     }}
   </div>
 </div>
